# bazel_cmake

./: .bazelrc  .gitignore  README.md  WORKSPACE.bazel
example/: BUILD.bazel  CMakeLists.txt
example/liba/: BUILD.bazel  liba.cpp  liba.hpp
example/libb/: BUILD.bazel  libb.cpp  libb.hpp
rules/: BUILD.bazel  cmake.bzl  cmake_gen_run.templ  cmake_info.bzl  cmake_info_aspect.bzl
tools/: tools_deps.bzl
tools/cmake_gen/: BUILD.bazel  Cargo.toml  cargo_dependencies.bzl
tools/cmake_gen/src/: main.rs
